<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/settings_subtitle1">

        <ListPreference
                android:inputType="number"
                android:defaultValue="1"
                app:singleLine="true"
                app:title="@string/settings_read_days_label"
                app:key="@string/key_expiration_read_article"
                app:defaultValue="3"
                android:entries="@array/setting_expiration_date"
                android:entryValues="@array/setting_expiration_date_values"
                app:summary="@string/settings_read_days_message"/>
    </PreferenceCategory>
    <PreferenceCategory
            app:title="@string/settings_subtitle2">
            <Preference
                    app:title="@string/settings_about_label" >
                <intent
                        android:action="android.intent.action.VIEW"
                        android:data="http://pigeoff.pw" />
            </Preference>
        <Preference
                app:key="libraries"
                app:title="@string/settings_libraries_label" >

        </Preference>

    </PreferenceCategory>
</PreferenceScreen>